cluster/core/longhorn/envoy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-api
  namespace: longhorn-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: longhorn.home.vabalai.eu
spec:
  gatewayClassName: envoy
  infrastructure:
    labels:
      app: envoy-gateway
  listeners:
    # - name: http
    #   protocol: HTTP
    #   port: 80
    #   allowedRoutes:
    #     namespaces:
    #       from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: longhorn.home.vabalai.eu
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: longhorn-tls
            namespace: longhorn-system
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-route
  namespace: longhorn-system
spec:
  parentRefs:
  - name: gateway-api
    group: gateway.networking.k8s.io
    sectionName: https
    kind: Gateway
  hostnames:
  - longhorn.home.vabalai.eu
  rules:
  - backendRefs:
    - name: longhorn-frontend
      group: ''
      kind: Service
      port: 80
      weight: 1
    matches:	
        - path:	
            type: PathPrefix	
            value: /
